ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vehicle-ingress
  namespace: vehicle
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vehicle-ui-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vehicle-core-service
                port:
                  number: 8000
          
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: vehicle-core-service
                port:
                  number: 8000

          - path: /openapi.json 
            pathType: Prefix 
            backend: 
              service: 
                name: vehicle-core-service 
                port: 
                  number: 8000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: vehicle-core-service
                port:
                  number: 8000
